--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,19 +10,13 @@ on:
   pull_request:
     branches: [ master ]
 jobs:
-build-android:
-    needs: install-and-test
+  install-and-test:
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v2
       - name: Install npm dependencies
         run: |
           npm install
-      - name: Build Android Release
+      - name: Run tests
         run: |
-          cd android && ./gradlew assembleDebug
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v1
-        with:
-          name: app-release.apk
-          path: android/app/build/outputs/apk/release/
+          npm test
