--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,13 +10,18 @@ on:
   pull_request:
     branches: [ master ]
 jobs:
-  install-and-test:
+  needs: install-and-test
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v2
       - name: Install npm dependencies
         run: |
           npm install
-      - name: Run tests
+      - name: Build Android Release
         run: |
-          npm test
+          cd android && ./gradlew assembleRelease -PMYAPP_UPLOAD_STORE_PASSWORD='${{ secrets.KEYSTORE_PASSWORD }}' -PMYAPP_UPLOAD_KEY_PASSWORD='${{ secrets.KEYSTORE_PASSWORD }}'
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: app-release.apk
+          path: android/app/build/outputs/apk/release/
