--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,7 +10,7 @@ on:
   pull_request:
     branches: [ master ]
 jobs:
-  needs: install-and-test
+ install-and-test:
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v2
