--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,9 +21,7 @@ jobs:
         run: |
           cd android && ./gradlew clean buildDebug -x lint
 
-      - name: Build for Android
-        run: cd .. && npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res
-        
+     
       - name: Build Android re
         run: |
-           cd android && ./gradlew assembleDebug 
+          ./gradlew assembleDebug 
