--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,4 +20,4 @@ jobs:
 
       - name: Build Android re
         run: |
-          ./gradlew assembleDebug 
+          cd android && ./gradlew assembleDebug 
