--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,10 +17,12 @@ jobs:
       - name: Install npm dependencies
         run: |
           npm install
-
-      - name: Build for Android
-        run: |
-         cd android && ./gradlew clean buildDebug -x lint
       - name: Build Android re
         run: |
           cd android && ./gradlew assembleDebug
+          
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: app-release.apk
+          path: android/app
