--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,4 +25,4 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: app-release.apk
-          path: android/app
+          path: android/app/build/outputs/apk/debug/
