--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,7 +11,7 @@ on:
     branches: [ master ]
 jobs:
  install-and-test:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v2
       - name: Install npm dependencies
