--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,15 @@ on:
     branches: [ master ]
 jobs:
  install-and-test:
-    runs-on: self-hosted
-    steps: 
+      runs-on: [self-hosted, macos]
+      steps: 
       - uses: actions/checkout@v2
-      - name: Changing directory
+      - name: Install npm dependencies
         run: |
-          cd ios
+          npm install
+      - name: Install pod dependencies
+        run: |
+          cd ios && pod install
       - name: Build app
         run: |       
           xcodebuild -workspace ./MyReactNative.xcworkspace -scheme MyReactNative archive -archivePath MyReactNative.xcarchive -allowProvisioningUpdates
