--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-# This is a basic workflow to help you get started with Actions
 
 name: IOSBUILD
 
@@ -20,9 +19,12 @@ jobs:
       - name: Install pod dependencies
         run: |
           cd ios && pod install
+      - name: checking file
+        run: |
+          cd ios && ls
       - name: Build app
         run: |       
-          xcodebuild -workspace ./MyReactNative.xcworkspace -scheme MyReactNative archive -archivePath MyReactNative.xcarchive -allowProvisioningUpdates
+          xcodebuild -workspace MyReactNative.xcworkspace -scheme MyReactNative archive -archivePath MyReactNative.xcarchive -allowProvisioningUpdates
           xcodebuild -exportArchive -archivePath ./MyReactNative.xcarchive -exportPath ./build -exportOptionsPlist MyReactNative/Info.plist
           mv MyReactNative.ipa ..MyReactNative.ipa
       - name: Upload Artifact
