--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           cd ios && ls
       - name: Build app
         run: |       
-          xcodebuild -workspace MyReactNative.xcworkspace -scheme MyReactNative archive -archivePath MyReactNative.xcarchive -allowProvisioningUpdates
+          xcodebuild -workspace MyReactNative -scheme MyReactNative archive -archivePath MyReactNative.xcarchive -allowProvisioningUpdates
           xcodebuild -exportArchive -archivePath ./MyReactNative.xcarchive -exportPath ./build -exportOptionsPlist MyReactNative/Info.plist
           mv MyReactNative.ipa ..MyReactNative.ipa
       - name: Upload Artifact
