--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,6 @@
+# This is a basic workflow to help you get started with Actions
 
-name: IOSBUILD
+name: Android/CI-CD
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -9,26 +10,24 @@ on:
   pull_request:
     branches: [ master ]
 jobs:
- install-and-test:
-      runs-on: [self-hosted, macos]
-      steps: 
+ Android Relese:
+    runs-on: ubuntu-latest
+    steps: 
       - uses: actions/checkout@v2
       - name: Install npm dependencies
         run: |
           npm install
-      - name: Install pod dependencies
+      - name: Build Android re
         run: |
-          cd ios && pod install
-      - name: checking file
+          cd android && ./gradlew assembleDebug
+          
+      - name: Deploy to App Center
         run: |
-          cd ios && ls
-      - name: Build app
-        run: |       
-          xcodebuild -workspace MyReactNative -scheme MyReactNative archive -archivePath MyReactNative.xcarchive -allowProvisioningUpdates
-          xcodebuild -exportArchive -archivePath ./MyReactNative.xcarchive -exportPath ./build -exportOptionsPlist MyReactNative/Info.plist
-          mv MyReactNative.ipa ..MyReactNative.ipa
+          npm install appcenter-cli@2.3.3
+          npx appcenter distribute release --token "${{APP_CENTER_ANDROID_API_TOKEN}}" --app "kishorerajasekar/testnative" --group "internalTester" --file "android/app/build/outputs/apk/debug/app-release.apk"
+          
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
-          name: myapp.ipa
-          path: ios/build/
+          name: app-release.apk
+          path: android/app/build/outputs/apk/debug/
