--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: Android/CI-CD
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ initial_appcentre ]
   pull_request:
-    branches: [ master ]
+    branches: [ initial_appcentre ]
 jobs:
  Android_Relese:
     runs-on: ubuntu-latest
