--- a/.github/workflows/testmain.yml
+++ b/.github/workflows/testmain.yml
@@ -24,7 +24,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world! ravi hi private
+        run: echo Hello, world! ravi hi alll
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
