--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,11 @@ name: Android/CI-CD
 # events but only for the master branch
 on:
   push:
-    branches: [ initial_appcentre ]
+    branches: 
+    - initial_appcentre
   pull_request:
-    branches: [ initial_appcentre ]
+    branches: 
+    - initial_appcentre
 jobs:
  Android_Relese:
     runs-on: ubuntu-latest
