--- a/.github/workflows/unitTest.yml
+++ b/.github/workflows/unitTest.yml
@@ -1,4 +1,3 @@
-# This is a basic workflow to help you get started with Actions
 
 name: Unit Test/CI-CD
 
@@ -12,21 +11,6 @@ on:
 jobs:
  Android_Relese:
     runs-on: ubuntu-latest
-    # This is a basic workflow to help you get started with Actions
-
-name: Unit Test/CI-CD
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
-on:
-  push:
-    branches: 
-      - master
-  
-jobs:
- Android_Relese:
-    runs-on: ubuntu-latest
-    allow-failure: true
     steps: 
       - uses: actions/checkout@v2
       - name: Install npm dependencies
@@ -35,19 +19,8 @@ jobs:
       - name: Unit Test
         run: |
           npm run-script test
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v1
-        with:
-          name: unit_test_result
-          path: coverage/lcov-report
-    steps: 
-      - uses: actions/checkout@v2
-      - name: Install npm dependencies
-        run: |
-          npm install
-      - name: Unit Test
-        run: |
-          npm run-script test
+      - name: The job has failed
+        if: ${{ failure() }}
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
