--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Deploy to App Center
         run: |
           npm install appcenter-cli@2.3.3
-          npx appcenter distribute release --token "${{secrets.APP_CENTER_ANDROID_API_TOKEN}}" --app "kishorerajasekar/testnative" --group "internalTester" --file "android/app/build/outputs/apk/debug/*.apk"
+          npx appcenter distribute release --token "${{secrets.APP_CENTER_ANDROID_API_TOKEN}}" --app "kishorerajasekar/testnative" --group "internalTester" --file "android/app/build/outputs/apk/debug/.apk"
           
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
