--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -8,20 +8,13 @@
 	<string>export</string>
 	<key>method</key>
 	<string>development</string>
-	<key>provisioningProfiles</key>
-	<dict>
-		<key>com.htc.MyReactNative</key>
-		<string>MyReactnative Dev Profile</string>
-	</dict>
-	<key>signingCertificate</key>
-	<string>Apple Development</string>
 	<key>signingStyle</key>
-	<string>manual</string>
+	<string>automatic</string>
 	<key>stripSwiftSymbols</key>
 	<true/>
 	<key>teamID</key>
 	<string>YA5NH562EY</string>
 	<key>thinning</key>
-	<string>&lt;thin-for-all-variants&gt;</string>
+	<string>&lt;none&gt;</string>
 </dict>
 </plist>
