--- a/.github/workflows/iosmain.yml
+++ b/.github/workflows/iosmain.yml
@@ -61,5 +61,5 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
-          name: myappA.ipa
+          name: myapp.ipa
           path: ios/build/
