--- a/.github/workflows/unitTest.yml
+++ b/.github/workflows/unitTest.yml
@@ -17,6 +17,7 @@ jobs:
         run: |
           npm install
       - name: Unit Test
+        if: ${{ failure() }}
         run: |
           npm run-script test
      
