--- a/.github/workflows/iosmain.yml
+++ b/.github/workflows/iosmain.yml
@@ -66,5 +66,5 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
-          name: myappA.ipa
+          name: myapp_ipa
           path: ios/build/
