--- a/.github/workflows/ioslane.yml
+++ b/.github/workflows/ioslane.yml
@@ -12,6 +12,11 @@ jobs:
       runs-on: macos-latest
       steps: 
       - uses: actions/checkout@v2
+      - name: Create IPA Build
+        run: ls
+        
       - name: test
-        run : cd ios & ls
-      
+        run : |
+         cd ios
+         ls
+         
