--- a/.github/workflows/ioslane.yml
+++ b/.github/workflows/ioslane.yml
@@ -12,11 +12,22 @@ jobs:
       runs-on: macos-latest
       steps: 
       - uses: actions/checkout@v2
+
+      
       - name: Create IPA Build
-        run: ls
-        
-      - name: test
-        run : |
-         cd ios
-         ls
-         
+        env:
+          APP_IDENTIFIER: com.htc.MyReactNative
+          APPLE_ID: systems@htcindia.com
+          GIT_REPO_URL: https://github.com/TestingHtcMobileCoE/HeartsAppCertificates.git
+          FASTLANE_PASSWORD: Htc@14112019
+          CI_KEYCHAIN_NAME: nativeKeychain
+          CI_KEYCHAIN_PASSWORD: apple
+          DEVELOPER_TEAM_ID: YA5NH562EY
+          MATCH_PASSWORD: Heartsapplanepass
+        run: cd ios && fastlane beta
+      
+      - name: Upload IPA
+        uses: actions/upload-artifact@v1
+        with:
+          name: sample.ipa
+          path: fastlane/builds/
