--- a/.github/workflows/ioslane.yml
+++ b/.github/workflows/ioslane.yml
@@ -12,7 +12,12 @@ jobs:
       runs-on: macos-latest
       steps: 
       - uses: actions/checkout@v2
-
+      - name: Install npm dependencies
+        run: |
+          npm install
+      - name: Install pod dependencies
+        run: |
+          cd ios && npx pod-install
       
       - name: Create IPA Build
         env:
