--- a/.github/workflows/unitTest.yml
+++ b/.github/workflows/unitTest.yml
@@ -5,8 +5,8 @@ name: Unit Test/CI-CD
 # events but only for the master branch
 on:
   push:
-    branches: 
-      - master
+    tags:        
+      - V*
   
 jobs:
  Android_Relese:
