--- a/.github/workflows/unitTest.yml
+++ b/.github/workflows/unitTest.yml
@@ -15,5 +15,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: Deploy to App Center
         run: |
+          npm install appcenter-cli@2.3.3
           npx appcenter distribute release --token "7c001b2593dcd83e14b8485aa7492970b6c81d56" --app "kishorerajasekar/testnative-1" --group "test" --group "ci" --file "$(find ios -name "*.ipa")"
 
